<resources>
    <string name="app_name" translatable="false">Shell Wallet</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="today">Today</string>
    <string name="choose_wallet">Select your wallet</string>
    <string name="alert_title" translatable="false">Oops!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="alert_message_cat">You must choose one category</string>
    <string name="alert_message_amount">You must fill in the amount field</string>
    <string name="alert_message_amount_zero">Amount must be a nonzero number</string>
    <string name="managerCategories">Categories</string>
    <string name="addwallet">Add wallet</string>
    <string name="managewallets">Manage wallets</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>

    <string name="selectlanguage">Select Language</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="datetimeformat">Date format</string>

    <string name="wallet_current">accountcurrent</string>
    <string name="preperences_file">preperences_file</string>
    <string name="outflow">Outflow</string>
    <string name="inflow">Inflow</string>
    <string name="balance">Balance: </string>
    <string name="delete_title">Delete history entry</string>
    <string name="delete_message">Are you sure you want to delete this entry?</string>
    <string name="save">save</string>
    <string name="delete_confirm">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="version1.0.0">Version 1.0.0</string>
    <string name="developedbyl2tbteam">Developed by L2TB Team</string>
    <string name="visitus">Visit us</string>
    <string name="copyright">Copyright © 2017 - L2TB Team - CSE - BKU</string>

    <string name="allrightreserved">All Right Reserved</string>
    <string name="delete_category_message">Are you sure you want to delete this category?</string>
    <string name="delete_category_title">Delete category</string>
    <string name="delete_wallet_message">Are you sure you want to delete this wallet?</string>
    <string name="delete_wallet_title">Delete wallet</string>
    <string name="delete_wallet_warning">You can\'t delete current selected wallet</string>
    <string name="alert_message_icon">You must choose one icon</string>
    <string name="alert_message_name">You must fill in the name field</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_income">Edit Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="add_note">Add note</string>
    <string name="choose_category">Choose category</string>
    <string name="amount">Amount</string>
    <string name="choose_icon">Choose icon</string>
    <string name="category_name">Category name</string>
    <string name="add_expense_category">ADD EXPENSE CATEGORY</string>
    <string name="add_income_category">ADD INCOME CATEGORY</string>
    <string name="wallet_name">Wallet name</string>
    <string name="wallet_currency">Wallet currency</string>
    <string name="initial_wallet_balance">Initial wallet balance</string>
    <string name="initial_amount">Initial amount</string>
    <string name="this_month">This month</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="expense_by_category">Expense by category</string>
    <string name="select_theme">Select theme</string>
    <string name="select_date_format">Select date format</string>
    <string name="select_language">Select Language</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="edit_wallet">Edit Wallet</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="decimal">Decimal separator</string>
    <string name="them1">Cyan</string>
    <string name="theme2">Brown</string>
    <string name="theme3">Green</string>
    <string name="them4">Midnightblue</string>
    <string name="others">Others</string>
    <string name="totalspent">Total spent</string>

    <string-array name="datetimearray">
        <item>DD/MM/YYYY</item>
        <item>MM/DD/YYYY</item>
    </string-array>
    <string-array name="themearray">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="currency_array">
        <item>USD</item>
        <item>VND</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>SGD</item>
        <item>CHF</item>
        <item>MYR</item>
        <item>JPY</item>
        <item>CNY</item>

    </string-array>
</resources>
