<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shell.shellwallet.AddActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:hint="@string/amount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/walletImage"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        app:layout_constraintRight_toLeftOf="@+id/currencydisplay" />

    <ImageView
        android:id="@+id/noteImage"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletImage"
        app:srcCompat="@drawable/ic_create" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_note"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:imeOptions="actionDone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/noteImage"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="setDate"
        android:text="Date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/walletImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/wallet_google"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/choosecategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_category"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNote" />

    <GridView
        android:id="@+id/gridview1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/choosecategory"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:numColumns="3"/>

    <TextView
        android:id="@+id/currencydisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="8dp"
        android:text="USD"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNote"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
